@@ -42,3 +42,5 @@ fff3b64c7f9d26c0a7232b86d3d5b9dde527c8f7 conary-1.0.4
 eeb058bc96a5a190f60aedf6dadde9d6c483d3cb conary-1.0.5
 5510abcb96a81d9af8775b89b71404c108eaa80e conary-1.0.6
 6e2a5e33523c1b84922e8bb8eb49a76eaf8f2aa1 conary-1.0.6
+f1c90ae747cf67a17367090eb6187e3eeac2effd conary-1.0.7
+e97caa330980eafaa695d0bcb10b9db604bb3f12 conary-1.0.7
